new design kiosk phone, tablet, monint. perfomanse, optimize code